fix textarea overflow leads to text outside note

--- a/front/src/app.module.scss
+++ b/front/src/app.module.scss
@@ -4,10 +4,14 @@
   height: 100%;
 }
 
-.notes {
+.notesContainer {
   width: 100%;
   height: auto;
   flex-grow: 1;
+}
+
+.notes {
+  list-style-type: none;
 }
 
 .footer {
