--- a/front/src/components/highlightning_textarea/textarea.module.css
+++ b/front/src/components/highlightning_textarea/textarea.module.css
@@ -1,7 +1,7 @@
 .container {
     position: relative;
     width: 100%;
-    height: 200px;
+    height: 182px;
 }
 
 .textarea {
@@ -10,6 +10,7 @@
 
     width: 100%;
     height: 100%;
+    top: 0;
 
     color: transparent;
     background-color: transparent;
@@ -23,7 +24,6 @@
 
 .result {
     padding: 2px;
-    position: absolute;
     width: 100%;
     height: 100%;
 
